# igar

./: .dockerignore  .gitignore  Makefile  conftest.py  docker-compose.dev.yml  manage.py  pyproject.toml
.github/: copilot-instructions.md
_bmad-output/implementation-artifacts/: 1-1-mise-en-place-du-socle-backend-pour-les-services-documentaires.md  1-2-deploiement-operationnel-de-la-plateforme-igar.md  1-3-interface-utilisateur-de-base-et-theme-igar.md  1-4-authentification-jwt-et-interface-de-connexion.md  1-4-code-review-completion-summary.md  1-4-code-review-report.md  1-5-authentification-a-deux-facteurs-2fa.md  1-6-gestion-des-utilisateurs-roles-et-cloisonnement.md  2-1-upload-de-documents-par-drag-and-drop-et-selecteur-de-fichiers.md  2-2-upload-resumable-et-progression-temps-reel.md  2-3-pipeline-ocr-extraction-de-texte.md  2-4-classification-ia-et-extraction-de-metadonnees.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd.md  (+4 more)
docker/: entrypoint.sh
frontend/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
igar/: asgi.py  routing.py  urls.py  wsgi.py
infrastructure/: .env.example  docker-compose.dev.yml  docker-compose.yml
requirements/: base.txt
tests/: test_admin_endpoints.py  test_auth_2fa.py  test_auth_api.py  test_capture_hook.py  test_capture_services.py  test_capture_tasks.py  test_capture_websocket.py  test_document_access_enforcement.py  test_document_access_queryset_filter.py  test_health.py  test_project_structure.py  test_rbac_models.py  test_ruff.py  test_server_starts.py
(+163 files in other folders)
